[project]
name = "climb-log"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.0",
]

[project.scripts]
climb-log = "climb_log.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climb_log"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "hatchling>=1.29.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["src/tests"]
